--- a/index.html
+++ b/index.html
@@ -1,107 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Ma Page Web</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <meta charset="UTF-8">
+    <title>Ma Page Web</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
 </head>
+
 <body>
 
     <header>
         <nav>
-          <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#work">Work</a></li>
-            <li><a href="#resume">Resume</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="work.html">Work</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
         </nav>
-      </header>
+    </header>
 
 
     <div class="content">
-    <div class="container">
-        <div class="text">
-        <h2>Hi, I'm Oly, a web designer</h2>
-        <p>I made this website with what I learned from my experience and Gomycode lessons.</p>
-        </div>
-        <div class="image">
-        <img src="ressource/image/oly.jpeg" alt="Image de la personne">
-        <div class="audio-player">
-            <audio controls>
-              <source src="ressource/mp3/Dadju - Confessions (Officiel Instrumental).mp3" type="audio/mpeg">
-              Votre navigateur ne supporte pas l'élément audio.
-            </audio>
-          </div>
-        </div>
+        <div class="container">
+            <div class="text">
+                <h2>Hi, I'm Oly, a web designer</h2>
+                <p>I made this website with what I learned from my experience and Gomycode lessons.</p>
+            </div>
+            <div class="image">
+                <img src="ressource/image/oly.jpeg" alt="Image de oly">
+                <div class="audio-player">
+                    <audio controls>
+                        <source src="ressource/mp3/Dadju - Confessions (Officiel Instrumental).mp3" type="audio/mpeg">
+                        Votre navigateur ne supporte pas l'élément audio.
+                    </audio>
+                </div>
+            </div>
         </div>
     </div>
-    
+
     <div class="carousel-container">
-        <h2>Image Carousel</h2>
         <div id="carouselExample" class="carousel slide" data-ride="carousel">
-          <div class="carousel-inner">
-            <!-- Images -->
-            <div class="carousel-item active">
-              <img src="ressource/image/web.jpg" class="d-block w-100" alt="Image 1">
+            <div class="carousel-inner">
+                <!-- Images -->
+                <div class="carousel-item active">
+                    <img src="ressource/image/web.jpg" class="d-block w-100" alt="Image 1">
+                </div>
+                <div class="carousel-item">
+                    <img src="ressource/image/web2.jpg" class="d-block w-100" alt="Image 2">
+                </div>
+                <!-- Videos -->
+                <div class="carousel-item">
+                    <iframe width="100%" height="600"
+                        src="https://www.youtube.com/embed/WdMPKupODo8?si=t2c_KCp3tA8SIPer" frameborder="0"
+                        allowfullscreen></iframe>
+                </div>
+                <div class="carousel-item">
+                    <iframe width="100%" height="600"
+                        src="https://www.youtube.com/embed/_daY9WNs_Pg?si=rwLC6iozz77udTB7" frameborder="0"
+                        allowfullscreen></iframe>
+                </div>
             </div>
-            <div class="carousel-item">
-              <img src="ressource/image/web2.jpg" class="d-block w-100" alt="Image 2">
+            <!-- Preview thumbnails -->
+            <div class="carousel-indicators">
+                <div class="row">
+                    <div class="col-3">
+                        <img src="ressource/image/web.jpg" class="d-block w-100" data-target="#carouselExample"
+                            data-slide-to="0" alt="Thumbnail 1">
+                    </div>
+                    <div class="col-3">
+                        <img src="ressource/image/web2.jpg" class="d-block w-100" data-target="#carouselExample"
+                            data-slide-to="1" alt="Thumbnail 2">
+                    </div>
+                    <div class="col-3">
+                        <img src="ressource/image/v1.PNG" class="d-block w-100" data-target="#carouselExample"
+                            data-slide-to="2" alt="Video 1">
+                    </div>
+                    <div class="col-3">
+                        <img src="ressource/image/v2.PNG" class="d-block w-100" data-target="#carouselExample"
+                            data-slide-to="3" alt="Video 2">
+                    </div>
+                </div>
             </div>
-            <!-- Videos -->
-            <div class="carousel-item">
-              <iframe  width="100%" height="600" src="https://www.youtube.com/embed/WdMPKupODo8?si=t2c_KCp3tA8SIPer" frameborder="0" allowfullscreen></iframe>
-            </div>
-            <div class="carousel-item">
-              <iframe width="100%" height="600" src="https://www.youtube.com/embed/_daY9WNs_Pg?si=rwLC6iozz77udTB7" frameborder="0" allowfullscreen></iframe>
-            </div>
-          </div>
-          <!-- Preview thumbnails -->
-          <div class="carousel-indicators">
-            <div class="row">
-              <div class="col-3">
-                <img src="ressource/image/web.jpg" class="d-block w-100" data-target="#carouselExample" data-slide-to="0" alt="Thumbnail 1">
-              </div>
-              <div class="col-3">
-                <img src="ressource/image/web2.jpg" class="d-block w-100" data-target="#carouselExample" data-slide-to="1" alt="Thumbnail 2">
-              </div>
-              <div class="col-3">
-                <img  src="ressource/image/v1.PNG" class="d-block w-100" data-target="#carouselExample" data-slide-to="2" alt="Video 1">
-              </div>
-              <div class="col-3">
-                <img src="ressource/image/v2.PNG" class="d-block w-100" data-target="#carouselExample" data-slide-to="3" alt="Video 2">
-              </div>
-            </div>
-          </div>
-        </div>  
+        </div>
     </div>
-      
+
     </div>
     </div>
 
 
 
-<footer>
-  <div class="social-icons">
-    <a href="https://www.facebook.com/olive.evina.52?mibextid=ZbWKw" target="_blank">
-      <img src="ressource/image/f.png" alt="Facebook">
-    </a>
-    <a href="https://instagram.com/evinaoly?igshid=MW80NWg5b21maXB1Nw==" target="_blank">
-      <img src="ressource/image/Instagram-Icon.png" alt="Instagram">
-    </a>
-    <a href="https://www.tiktok.com/@olycrush2?_t=8hNlyYBM4ub&_r=1" target="_blank">
-      <img src="ressource/image/tiktok.png" alt="TikTok">
-    </a>
-  </div>
-</footer>
+    <footer>
+        <div class="social-icons">
+            <a href="https://www.facebook.com/olive.evina.52?mibextid=ZbWKw" target="_blank">
+                <img src="ressource/image/f.png" alt="Facebook">
+            </a>
+            <a href="https://instagram.com/evinaoly?igshid=MW80NWg5b21maXB1Nw==" target="_blank">
+                <img src="ressource/image/Instagram-Icon.png" alt="Instagram">
+            </a>
+            <a href="https://www.tiktok.com/@olycrush2?_t=8hNlyYBM4ub&_r=1" target="_blank">
+                <img src="ressource/image/tiktok.png" alt="TikTok">
+            </a>
+        </div>
+    </footer>
 
-<script src="script.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="script.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 </body>
+
 </html>
