--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="container">
             <div class="text">
                 <h2>Hi, I'm Oly, a web designer</h2>
-                <p>I made this website with what I learned from my experience and Gomycode lessons.</p>
+                <p class="textItalique">I made this website with what I learned from my experience and Gomycode lessons.</p>
             </div>
             <div class="image">
                 <img src="ressource/image/oly.jpeg" alt="Image de oly">
